tests/test_assets/semantic/invalid/switch/case_type_mismatch.expected
semantic error at line 8: switch case type does not match switch expression type
1 semantic error generated.
